cleaning up code based on information from ngBook2

--- a/client/new-party.html
+++ b/client/new-party.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form (submit)="add($event, partyForm.value)" [ng-form-model]="partyForm" >
+    <form (submit)="add($event)" [ng-form-model]="partyForm" >
 
         <div class="eight columns">
             <label for="name">Name</label>
