--- a/client/new-party.html
+++ b/client/new-party.html
@@ -12,7 +12,8 @@
             <input  class="u-full-width"  type="text" id="location" [ng-form-control]="partyForm.controls['location']">
 
             <label for=""></label>
-            <button type="submit">Add</button>
+            <button type="submit" *ng-if="party">Edit Party</button>
+            <button type="submit" *ng-if="!party">Create</button>
             <a class="button" href="/" >Cancel</a>
         </div>
 
